fixes style.css, script.js

--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet"> 
+
     <title>Rolando dados</title>
+
 </head>
 <body>
+    <header>
     <h1>Rolando dados</h1>
 
-    <script src="dice-roller.js"></script>
+    <p>Se rolarmos dois dados de 6 faces, 1000 vezes, 
+        e a cada rolagem somarmos seu valor, 
+        com qual frequência teremos os números de 2 a 12 ?
+    </p>
+</header>
+
+    <div id="frequencia"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
