--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Rolando dados</h1>
 
     <p>Se rolarmos dois dados de 6 faces, 1000 vezes, 
-        e a cada rolagem somarmos seu valor, 
+        e a cada rolagem somarmos seus valores, 
         com qual frequência teremos os números de 2 a 12 ?
     </p>
 </header>
